syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "BlazorGrpc.Shared";

package WeatherForecast;

service WeatherForecastService {
  rpc GetWeatherForecast (google.protobuf.Empty) returns (WeatherForecastResponse);
}

message WeatherForecastResponse {
  repeated WeatherForecast forecasts = 1;
}

message WeatherForecast {
  google.protobuf.Timestamp dateTimeStamp = 1;
  int32 temperatureC = 2;
  string summary = 3;
}

